# 2026-systex-keystone-rt-linux

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  demo.md  ideas.md  qemu_connect.sh  rebuild_example.sh  setup.sh  todo.md
docs/: building.md  making-figures.md  preparing-the-boards.md  running-the-experiments.md
enclave_examples/fib-bench/: CMakeLists.txt
enclave_examples/fib-bench/eapp/: eapp.c
enclave_examples/hold-cycle/: CMakeLists.txt
enclave_examples/hold-inf/: CMakeLists.txt
enclave_examples/hold-tmp/: CMakeLists.txt
enclave_examples/holdup-inf/: CMakeLists.txt
enclave_examples/holdup-period/: CMakeLists.txt
enclave_examples/prime-time/: CMakeLists.txt
enclave_examples/repeat-monitor/: CMakeLists.txt
enclave_examples/repeat-task/: CMakeLists.txt
figures/: enclave_lifetime.drawio  keystone_overview.drawio
keystone-enclaves/: CMakeLists.txt
keystone-enclaves/cyclictest/: CMakeLists.txt
keystone-enclaves/latency/: CMakeLists.txt
keystone-enclaves/latency/host/: host.cpp
keystone-enclaves/loop-task/: CMakeLists.txt
keystone-fs/root/: run-enclave-latency.sh  run-enclave-loop.sh  run-test.sh
qemu-demo/: demo.md
references/: bibliography.bib
results/: generate-figures.py  requirements.txt
results/figures/: fig.md
rt-linux/: .gitignore  .gitmodules  image_comparaison.md
rt-linux/patches/: patch-6.6.51-rt42.patch
scripts/: cmd.md  flash_sd.sh  full_test.sh  generate-figure-dual.py  generate-figure.py  get_file.sh  rebuild_test.sh  run-iperf.sh  run_enclave.sh  send_test.sh
sm/: doc_preview.md
(+30 files in other folders)
